Better spacing for issues page

--- a/app/assets/stylesheets/base/mirador.scss
+++ b/app/assets/stylesheets/base/mirador.scss
@@ -24,6 +24,6 @@
         display: none !important;
     }
 }
-/*.mirador-window-top-bar .MuiTypography-h2 {
+.mirador-window > nav > div > div > ul {
     display: none;
-}*/
+}
